[gd_scene load_steps=6 format=3 uid="uid://cd0l617b5aw87"]

[ext_resource type="Script" path="res://character/ball.gd" id="1_w6bjn"]
[ext_resource type="Material" uid="uid://c1rt6qhbqn4bw" path="res://materials/ball.tres" id="2_l5gtt"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2xw0a"]
rough = true
bounce = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_vgunc"]

[sub_resource type="SphereMesh" id="SphereMesh_g0grq"]
material = ExtResource("2_l5gtt")

[node name="Ball" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_2xw0a")
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 6
script = ExtResource("1_w6bjn")

[node name="Shape" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_vgunc")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_g0grq")

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
